--- a/app/src/main/res/layout-land/language.xml
+++ b/app/src/main/res/layout-land/language.xml
@@ -24,6 +24,7 @@
         android:id="@+id/english"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         android:text="@string/english"
         android:textAlignment="center"
@@ -33,12 +34,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currLE"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.35" />
+        app:layout_constraintWidth_percent="0.25" />
 
     <Button
         android:id="@+id/slovak"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         android:text="@string/slovak"
         android:textAlignment="center"
@@ -49,7 +51,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/currLS"
         app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintWidth_percent="0.35" />
+        app:layout_constraintWidth_percent="0.25" />
 
     <Button
         android:id="@+id/backD"
@@ -67,6 +69,7 @@
         android:id="@+id/currLS"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         android:text="@string/currentLang"
         android:textAlignment="center"
@@ -86,6 +89,7 @@
         android:id="@+id/currLE"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         android:text="@string/currentLang"
         android:textAlignment="center"
