--- a/app/src/main/res/layout-land/signin.xml
+++ b/app/src/main/res/layout-land/signin.xml
@@ -16,10 +16,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintHorizontal_bias="0.769"
+        app:layout_constraintHorizontal_bias="0.771"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.2"
         tools:visibility="visible" />
 
@@ -44,6 +44,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="52dp"
+        android:autoSizeMaxTextSize="25sp"
         android:autoSizeTextType="uniform"
         android:text="@string/sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,7 +53,7 @@
         app:layout_constraintHorizontal_bias="0.554"
         app:layout_constraintStart_toEndOf="@+id/logo"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.35" />
 
     <TextView
@@ -60,8 +61,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:autoSizeMaxTextSize="17sp"
         android:autoSizeTextType="uniform"
         android:text="@string/welcome_back_you_ve_been_missed"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.06"
         app:layout_constraintHorizontal_bias="0.554"
@@ -73,16 +76,17 @@
         android:id="@+id/signin"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         android:text="@string/sign_inT"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.11"
-        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toEndOf="@+id/logo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.071"
+        app:layout_constraintVertical_bias="0.073"
         app:layout_constraintWidth_percent="0.15" />
 
     <EditText
@@ -97,7 +101,7 @@
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="#000000"
+        android:autoSizeMaxTextSize="17sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
@@ -118,6 +122,7 @@
         android:importantForAutofill="no"
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:autoSizeMaxTextSize="17sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.554"
@@ -132,6 +137,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
+        android:autoSizeMaxTextSize="17sp"
         android:autoSizeTextType="uniform"
         android:clickable="true"
         android:minHeight="48dp"
@@ -154,6 +160,7 @@
         android:id="@+id/createacc"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="17sp"
         android:autoSizeTextType="uniform"
         android:text="@string/don_t_have_account_yet"
         android:textAlignment="center"
