--- a/app/src/main/res/layout-land/signup.xml
+++ b/app/src/main/res/layout-land/signup.xml
@@ -40,7 +40,8 @@
         android:ems="10"
         android:hint="@string/enter_city"
         android:inputType="text"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
@@ -59,7 +60,8 @@
         android:hint="@string/enter_email"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +76,8 @@
         android:ems="10"
         android:hint="@string/enter_name"
         android:inputType="text"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
@@ -82,7 +85,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.412"
-        app:layout_constraintWidth_percent="0.35" />
+        app:layout_constraintWidth_percent="0.35"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/passw"
@@ -93,7 +97,8 @@
         android:hint="@string/enter_password"
         android:importantForAutofill="no"
         android:inputType="textPassword"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +117,8 @@
         android:hint="@string/enter_street_num"
         android:importantForAutofill="no"
         android:inputType="number"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.0"
@@ -130,7 +136,8 @@
         android:ems="10"
         android:hint="@string/enter_street"
         android:inputType="text"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.721"
@@ -145,7 +152,8 @@
         android:layout_marginStart="84dp"
         android:layout_marginTop="20dp"
         android:text="@string/create"
-        android:textSize="24sp"
+        android:autoSizeMaxTextSize="28sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.15"
@@ -157,28 +165,35 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:autoSizeMaxTextSize="34sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/sign_up"
-        android:textSize="38sp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.12"
         app:layout_constraintHorizontal_bias="0.229"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08" />
+        app:layout_constraintVertical_bias="0.08"
+        app:layout_constraintWidth_percent="0.15" />
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="28dp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/please_fill_all_the_fields_below"
-        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.202"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintHorizontal_bias="0.153"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintWidth_percent="0.35" />
 
     <TextView
         android:id="@+id/error"
@@ -187,7 +202,8 @@
         android:layout_marginStart="115dp"
         android:layout_marginTop="80dp"
         android:textColor="#FF0000"
-        android:textSize="18sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintHorizontal_bias="0.803"
