--- a/app/src/main/res/layout/create_delivery.xml
+++ b/app/src/main/res/layout/create_delivery.xml
@@ -83,7 +83,8 @@
         android:hint="@string/enter_receivID"
         android:importantForAutofill="no"
         android:inputType="text"
-        android:textSize="19sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.065"
@@ -114,7 +115,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:textSize="19sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/enter_note"
@@ -134,7 +136,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
-        android:textSize="20sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/delType"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view3"
@@ -149,7 +152,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:textSize="19sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/economy"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
@@ -163,7 +167,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:textSize="19sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/standard"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
@@ -177,7 +182,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        android:textSize="19sp"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/fast"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
@@ -191,7 +197,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:textSize="20sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/noteText"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view4"
@@ -205,7 +212,8 @@
         android:id="@+id/textID"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="20sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeTextType="uniform"
         android:text="@string/enter_receivIDText"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
