--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -26,6 +26,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/history"
         android:textAlignment="center"
+        android:autoSizeMaxTextSize="30sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +42,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/language"
         android:textAlignment="center"
+        android:autoSizeMaxTextSize="30sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +57,7 @@
         android:layout_height="0dp"
         android:text="@string/signout"
         android:textAlignment="center"
+        android:autoSizeMaxTextSize="30sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +86,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textAlignment="center"
-        android:textSize="34sp"
+        android:autoSizeMaxTextSize="34sp"
+        android:autoSizeTextType="uniform"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +104,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="16sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.03"
         app:layout_constraintStart_toStartOf="parent"
