--- a/app/src/main/res/layout-land/carousel.xml
+++ b/app/src/main/res/layout-land/carousel.xml
@@ -7,11 +7,13 @@
 
     <ImageView
         android:id="@+id/image1"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="image1" />
+        android:contentDescription="image1"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintWidth_percent="0.35"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
