--- a/app/src/main/res/layout-land/home.xml
+++ b/app/src/main/res/layout-land/home.xml
@@ -30,13 +30,13 @@
         android:scaleType="centerCrop"
         android:src="@drawable/avatar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.17"
-        app:layout_constraintHorizontal_bias="0.122"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/logo"
+        app:layout_constraintHeight_percent="0.19"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintStart_toStartOf="@+id/logo"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.178"
-        app:layout_constraintWidth_percent="0.08"
+        app:layout_constraintVertical_bias="0.176"
+        app:layout_constraintWidth_percent="0.1"
         tools:srcCompat="@tools:sample/avatars"
         tools:visibility="visible" />
 
@@ -74,9 +74,10 @@
     </androidx.viewpager.widget.ViewPager>
 
     <Button
-        android:id="@+id/history"
+        android:id="@+id/createDel"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="40sp"
         android:autoSizeTextType="uniform"
         android:text="@string/create_delivery"
         android:textAlignment="center"
@@ -94,7 +95,9 @@
         android:id="@+id/nameH"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="38sp"
         android:autoSizeTextType="uniform"
+        android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
