--- a/app/src/main/res/layout-land/profile.xml
+++ b/app/src/main/res/layout-land/profile.xml
@@ -20,6 +20,7 @@
         android:id="@+id/history"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         android:text="@string/history"
         android:textAlignment="center"
@@ -40,6 +41,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/language"
         android:textAlignment="center"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.15"
@@ -54,6 +56,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="152dp"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         android:text="@string/signout"
         android:textAlignment="center"
@@ -84,6 +87,7 @@
         android:id="@+id/nameP"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="50sp"
         android:autoSizeTextType="uniform"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -101,7 +105,8 @@
         android:layout_height="0dp"
         android:layout_marginTop="28dp"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:autoSizeMaxTextSize="28sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.08"
         app:layout_constraintHorizontal_bias="0.023"
