--- a/app/src/main/res/layout/carousel.xml
+++ b/app/src/main/res/layout/carousel.xml
@@ -11,11 +11,11 @@
         android:layout_height="0dp"
         android:background="@drawable/round_corners"
         android:contentDescription="image1"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHeight_percent="0.2"
-        app:layout_constraintWidth_percent="0.9"/>
+        app:layout_constraintWidth_percent="0.9" />
 </androidx.constraintlayout.widget.ConstraintLayout>
