--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="@string/sign_in"
+        android:autoSizeMaxTextSize="32sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +45,7 @@
         android:importantForAutofill="no"
         android:inputType="textPassword"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +66,7 @@
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:autoSizeMaxTextSize="20sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,6 +80,7 @@
         android:id="@+id/signin"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="40sp"
         android:autoSizeTextType="uniform"
         android:text="@string/sign_inT"
         android:textAlignment="center"
@@ -95,7 +99,8 @@
         android:layout_marginTop="4dp"
         android:text="@string/welcome_back_you_ve_been_missed"
         android:textAlignment="center"
-        app:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="18sp"
+        android:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.04"
         app:layout_constraintHorizontal_bias="0.494"
@@ -108,6 +113,7 @@
         android:id="@+id/signupB"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:clickable="true"
         android:minHeight="48dp"
@@ -130,6 +136,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
+        android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         android:text="@string/don_t_have_account_yet"
         android:textAlignment="center"
