--- a/app/src/main/res/layout-land/create_delivery.xml
+++ b/app/src/main/res/layout-land/create_delivery.xml
@@ -28,7 +28,7 @@
         android:ems="10"
         android:hint="@string/enter_receivID"
         android:importantForAutofill="no"
-        android:inputType="text"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="@+id/view2"
         app:layout_constraintHeight_percent="0.12"
@@ -186,16 +186,16 @@
         android:id="@+id/fast"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/fast"
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
+        android:text="@string/fast"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.12"
-        app:layout_constraintHorizontal_bias="0.365"
+        app:layout_constraintHorizontal_bias="0.361"
         app:layout_constraintStart_toEndOf="@+id/economy"
-        app:layout_constraintTop_toTopOf="@+id/view3"
-        app:layout_constraintVertical_bias="0.379"
+        app:layout_constraintTop_toBottomOf="@+id/delType"
+        app:layout_constraintVertical_bias="0.055"
         app:layout_constraintWidth_percent="0.08" />
 
     <CheckBox
