--- a/app/src/main/res/layout/create_delivery.xml
+++ b/app/src/main/res/layout/create_delivery.xml
@@ -82,7 +82,7 @@
         android:ems="10"
         android:hint="@string/enter_receivID"
         android:importantForAutofill="no"
-        android:inputType="text"
+        android:inputType="number"
         android:autoSizeMaxTextSize="18sp"
         android:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="@+id/view2"
@@ -172,7 +172,7 @@
         android:text="@string/standard"
         app:layout_constraintEnd_toEndOf="@+id/view3"
         app:layout_constraintHeight_percent="0.055"
-        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="@+id/view3"
         app:layout_constraintTop_toBottomOf="@+id/economy"
         app:layout_constraintWidth_percent="0.29" />
