--- a/app/src/main/res/layout/create_delivery.xml
+++ b/app/src/main/res/layout/create_delivery.xml
@@ -47,7 +47,7 @@
         app:layout_constraintWidth_percent="0.9" />
 
     <Button
-        android:id="@+id/history"
+        android:id="@+id/createD"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:autoSizeTextType="uniform"
